--- a/frontend/src/app/pages/user-administration/overview/user-administration-overview.component.html
+++ b/frontend/src/app/pages/user-administration/overview/user-administration-overview.component.html
@@ -1,128 +1,36 @@
 <div class="ps-5 pt-5">
   <atlas-button
-    (buttonClicked)="routeToCreate()"
+    (buttonClicked)="newUser()"
     buttonDataCy="new-user"
     buttonText="USER_ADMIN.NEW"
+    buttonType="create"
+    wrapperStyleClass="mb-3"
+  >
+  </atlas-button>
+  <atlas-button
+    (buttonClicked)="newClient()"
+    buttonDataCy="new-user"
+    buttonText="USER_ADMIN.NEW_CLIENT_CREDENTIAL"
     buttonType="create"
     wrapperStyleClass="mb-5"
   >
   </atlas-button>
 
-  <div class="white-table-container-no-tabs">
-    <div class="font-bold-4xl color-gray-900 mb-5">
-      {{ 'USER_ADMIN.TABLE_HEADER' | translate }}
-    </div>
-
-    <app-table
-      (editElementEvent)="openUser($event)"
-      (getTableElementsEvent)="reloadTableWithCurrentSettings()"
-      [displayStatusSearch]="false"
-      [displayValidOnSearch]="false"
-      [isLoading]="tableIsLoading"
-      [loadTableSearch]="false"
-      [pageSizeOptions]="[5, 10, 20]"
-      [searchTextColumnStyle]="'col-12'"
-      [sortingDisabled]="true"
-      [tableColumns]="tableColumns"
-      [tableData]="userPageResult.users"
-      [totalCount]="userPageResult.totalCount"
+  <nav [tabPanel]="tabPanel" class="tabs" data-cy="tabs" mat-tab-nav-bar>
+    <a
+      (click)="activeTab = tab"
+      *ngFor="let tab of TABS"
+      [active]="activeTab === tab"
+      [routerLink]="tab.link"
+      class="font-bold-xl"
+      mat-tab-link
     >
-      <div class="d-flex flex-column mb-1">
-        <mat-label class="font-bold-lg">{{ 'COMMON.SEARCH.SEARCH_FOR' | translate }}</mat-label>
-        <mat-radio-group (change)="selectedSearchChanged()" [(ngModel)]="selectedSearch">
-          <mat-radio-button
-            *ngFor="let option of searchOptions"
-            [value]="option.value"
-            class="pe-2"
-          >
-            {{ option.translationKey | translate }}
-          </mat-radio-button>
-        </mat-radio-group>
-      </div>
-
-      <div class="col-12 search-section-height">
-        <ng-container *ngIf="selectedSearch === 'USER'; else filterTemplate">
-          <div class="mb-1">
-            <mat-label class="font-bold-lg">{{ 'USER_ADMIN.TABLE_HEADER' | translate }}</mat-label>
-          </div>
-          <app-user-select
-            (selectionChange)="checkIfUserExists($event)"
-            [form]="userSearchForm"
-          ></app-user-select>
-        </ng-container>
-
-        <ng-template #filterTemplate>
-          <ng-container *ngIf="selectedSearch === 'FILTER'; else cantonFilterTemplate">
-            <div class="d-flex flex-row">
-              <bo-select
-                (boSelectionChanged)="filterChanged()"
-                [controlName]="boSearchCtrlName"
-                [formGroup]="boForm"
-                [formModus]="false"
-                class="col-6 pe-1"
-              ></bo-select>
-
-              <div class="d-flex flex-column col-6 ps-3">
-                <mat-label class="font-bold-lg">{{
-                  'USER_ADMIN.APPLICATIONS' | translate
-                }}</mat-label>
-                <div [class.disabled]="boForm.disabled" class="multi-select-search">
-                  <mat-select
-                    (selectionChange)="filterChanged()"
-                    [(ngModel)]="selectedApplicationOptions"
-                    multiple
-                  >
-                    <mat-option
-                      *ngFor="let application of applicationBoOptions"
-                      [value]="application"
-                      >{{ 'USER_ADMIN.APPLICATION.' + application | translate }}</mat-option
-                    >
-                  </mat-select>
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </ng-template>
-
-        <ng-template #cantonFilterTemplate>
-          <div class="d-flex flex-row">
-            <div class="d-flex flex-column col-6 ps-1">
-              <mat-label class="font-bold-lg">{{ 'COMMON.CANTONS' | translate }}</mat-label>
-              <div [class.disabled]="boForm.disabled" class="multi-select-search">
-                <mat-select
-                  (selectionChange)="filterChanged()"
-                  [(ngModel)]="selectedCantonOptions"
-                  multiple
-                >
-                  <mat-option *ngFor="let canton of cantonOptions" [value]="canton">{{
-                    SWISS_CANTONS_PREFIX_LABEL + getCantonAbbreviation(canton) | translate
-                  }}</mat-option>
-                </mat-select>
-              </div>
-            </div>
-
-            <div class="d-flex flex-column col-6 ps-3">
-              <mat-label class="font-bold-lg">{{
-                'USER_ADMIN.APPLICATIONS' | translate
-              }}</mat-label>
-              <div [class.disabled]="boForm.disabled" class="multi-select-search">
-                <mat-select
-                  (selectionChange)="filterChanged()"
-                  [(ngModel)]="selectedApplicationOptions"
-                  multiple
-                >
-                  <mat-option
-                    *ngFor="let application of applicationCantonOptions"
-                    [value]="application"
-                    >{{ 'USER_ADMIN.APPLICATION.' + application | translate }}</mat-option
-                  >
-                </mat-select>
-              </div>
-            </div>
-          </div>
-        </ng-template>
-      </div>
-    </app-table>
+      {{ tab.title | translate }}
+    </a>
+  </nav>
+  <div class="white-table-container-tabs">
+    <mat-tab-nav-panel #tabPanel>
+      <router-outlet></router-outlet>
+    </mat-tab-nav-panel>
   </div>
 </div>
-<router-outlet></router-outlet>
