ATLAS-963: make it compile

--- a/frontend/src/app/pages/user-administration/client-credential/detail/client-credential-administration.component.html
+++ b/frontend/src/app/pages/user-administration/client-credential/detail/client-credential-administration.component.html
@@ -1,5 +1,7 @@
 <ng-container *ngIf="clientCredential.clientCredentialId; else create">
-  <app-user-administration-edit [user]="clientCredential"></app-user-administration-edit>
+  <app-client-credential-administration-edit
+    [client]="clientCredential"
+  ></app-client-credential-administration-edit>
 </ng-container>
 
 <ng-template #create>
