--- a/frontend/src/styles/core/_atlas-core.scss
+++ b/frontend/src/styles/core/_atlas-core.scss
@@ -52,3 +52,7 @@ input[type='number'] {
   height: variables.$footerHeight;
   background-color: variables.$primary-500;
 }
+
+.text-align-end {
+  text-align: end;
+}
