--- a/frontend/src/app/pages/lidi/workflow/overview/lidi-workflow-overview.component.html
+++ b/frontend/src/app/pages/lidi/workflow/overview/lidi-workflow-overview.component.html
@@ -9,6 +9,7 @@
   [tableColumns]="lineSnapshotsTableColumns"
   [tableData]="lineVersionSnapshots"
   [totalCount]="totalCount$"
+  [tableFilterConfig]="tableFilterConfig"
   data-cy="lidi-workflow-lines"
 >
 </app-table>
