ATLAS-1006: add display companies

--- a/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
@@ -19,8 +19,8 @@
         'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
           | translate
             : {
-                hearingFrom: foundTimetableHearingYear.hearingFrom,
-                hearingTo: foundTimetableHearingYear.hearingTo
+                hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
+                hearingTo: foundTimetableHearingYear.hearingTo | displayDate
               }
       }}</span>
     </div>
