--- a/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
@@ -10,19 +10,37 @@
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
       {{ 'PAGES.TTH.TITLE_MENU' | translate }} {{ foundTimetableHearingYear.timetableYear }}
     </div>
-    <div class="mb-5">
+    <div *ngIf="!noActiveTimetableHearingYearFound">
+      <div class="mb-5">
       <span>{{
         'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_PREFIX'
-          | translate : { timeTableYear: foundTimetableHearingYear.timetableYear }
-      }}</span>
-      <span class="font-bold-base">{{
-        'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
-          | translate
+          | translate : {timeTableYear: foundTimetableHearingYear.timetableYear}
+        }}</span>
+        <span class="font-bold-base">{{
+          'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
+            | translate
             : {
-                hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
-                hearingTo: foundTimetableHearingYear.hearingTo | displayDate
-              }
-      }}</span>
+              hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
+              hearingTo: foundTimetableHearingYear.hearingTo | displayDate
+            }
+          }}</span>
+      </div>
+    </div>
+    <div *ngIf="noActiveTimetableHearingYearFound">
+      <div class="mb-5">
+      <span>{{
+        'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_NOT_FOUND_SUBHEADING_PREFIX'
+          | translate : {timeTableYear: foundTimetableHearingYear.timetableYear}
+        }}</span>
+        <span class="font-bold-base">{{
+          'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
+            | translate
+            : {
+              hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
+              hearingTo: foundTimetableHearingYear.hearingTo | displayDate
+            }
+          }}</span>
+      </div>
     </div>
   </div>
   <div *ngIf="isHearingPlanPlanned()" class="ps-4">
@@ -32,6 +50,10 @@
     <div class="mb-5">
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_PLANNED_SUBHEADING' | translate }}</span>
     </div>
+    <div *ngIf="noActiveTimetableHearingYearFound" class="table-heading font-bold-xl color-gray-900 mb-3">
+      <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_PLANNED_NOT_FOUND' | translate }}</span>
+    </div>
+
   </div>
   <div *ngIf="isHearingPlanArchived()" class="ps-4">
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
@@ -39,6 +61,10 @@
     </div>
     <div class="mb-5">
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_ARCHIVED_SUBHEADING' | translate }}</span>
+    </div>
+
+    <div *ngIf="noActiveTimetableHearingYearFound" class="table-heading font-bold-xl color-gray-900 mb-3">
+      <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_ARCHIVED_NOT_FOUND' | translate }}</span>
     </div>
   </div>
 </div>
