--- a/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
@@ -9,7 +9,7 @@
     <div class="d-flex flex-row col-12">
       <div *ngIf="hearingStatus !== 'active'" class="d-flex flex-column col-2 pe-3 pb-1">
         <mat-label class="font-bold-lg subtitle-margin"
-        >{{ 'TTH.SELECT_YEAR' | translate }}
+          >{{ 'TTH.SELECT_YEAR' | translate }}
         </mat-label>
         <span class="fake-lable-space"></span>
         <div class="multi-select-search">
@@ -27,7 +27,7 @@
       </div>
       <div class="d-flex flex-column col-3 pe-3 pb-3 mb-5">
         <mat-label class="font-bold-lg subtitle-margin"
-        >{{ 'TTH.SELECT_CANTON' | translate }}
+          >{{ 'TTH.SELECT_CANTON' | translate }}
         </mat-label>
         <span class="fake-lable-space"></span>
         <div class="multi-select-search">
@@ -119,18 +119,35 @@
     </div>
     <div class="pb-3">
       <div>
-        <span class="font-bold-lg">{{
+        <span
+          *ngIf="hearingStatus === 'active' && cantonShort.toUpperCase() === 'CH'"
+          class="font-bold-lg"
+        >
+          {{
+            'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
+              | translate : { totalCount: totalCount$ }
+          }}
+          {{ 'TTH.WHOLE_SWISS' | translate }}
+        </span>
+        <span
+          *ngIf="hearingStatus === 'active' && cantonShort.toUpperCase() !== 'CH'"
+          class="font-bold-lg"
+        >
+          {{
+            'TTH.TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX'
+              | translate : { totalCount: totalCount$ }
+          }}
+          {{ 'TTH.SWISS_CANTON' | translate }}
+          {{ 'TTH.CANTON.' + cantonShort.toUpperCase() | translate }}
+        </span>
+        <span *ngIf="hearingStatus !== 'active'" class="font-bold-lg">{{
           'TTH.TABLE_RESULT_HEADING'
-            | translate
-            : {
-              totalCount: totalCount$,
-              year: foundTimetableHearingYear.timetableYear
-            }
-          }}</span>
+            | translate : { totalCount: totalCount$, year: foundTimetableHearingYear.timetableYear }
+        }}</span>
       </div>
       <div *ngIf="showHearingDetail">
         <span
-        >{{ this.foundTimetableHearingYear.hearingFrom | displayDate }}
+          >{{ this.foundTimetableHearingYear.hearingFrom | displayDate }}
           {{ 'COMMON.TO' | translate }}
           {{ this.foundTimetableHearingYear.hearingTo | displayDate }}</span
         >
