--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -1,4 +1,67 @@
 <div class="ps-5 pt-5 pb-5">
-  <div class="white-table-container-no-tabs">this is the detial</div>
-  asdf
+  <div class="white-table-container-no-tabs">
+    this is the detial
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    long shit
+  </div>
+
+  <div class="footer fixed-bottom d-flex align-items-center justify-content-center">
+    <atlas-button
+      [mat-dialog-close]="true"
+      buttonDataCy="back-to-overview"
+      buttonText="COMMON.BACK_TO_OVERVIEW"
+      buttonType="footerNonEdit"
+    >
+    </atlas-button>
+    <atlas-button
+      buttonDataCy="cancel"
+      buttonText="COMMON.CANCEL"
+      buttonType="footerEdit"
+      wrapperStyleClass="me-3"
+    >
+    </atlas-button>
+    <atlas-button
+      [submitButton]="true"
+      buttonDataCy="save-item"
+      buttonText="COMMON.SAVE"
+      buttonType="footerEdit"
+    >
+    </atlas-button>
+  </div>
 </div>
