--- a/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
+++ b/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
@@ -9,6 +9,7 @@
   [canEdit]="true"
   (editElementEvent)="editVersion($event)"
   (getTableElementsEvent)="getOverview($event)"
+  [tableFilterConfig]="tableFilterConfig"
   data-cy="bodi-business-organisation"
 >
 </app-table>
