--- a/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
+++ b/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
@@ -20,6 +20,7 @@
       [canEdit]="true"
       (editElementEvent)="editVersion($event)"
       (getTableElementsEvent)="getOverview($event)"
+      [tableFilterConfig]="tableFilterConfig"
     ></app-table>
     <router-outlet></router-outlet>
   </div>
