--- a/frontend/src/app/pages/user-administration/user/overview/user-administration-overview.component.html
+++ b/frontend/src/app/pages/user-administration/user/overview/user-administration-overview.component.html
@@ -1,12 +1,8 @@
 <app-table
   (editElementEvent)="openUser($event)"
   (getTableElementsEvent)="reloadTableWithCurrentSettings()"
-  [displayStatusSearch]="false"
-  [displayValidOnSearch]="false"
-  [isLoading]="tableIsLoading"
-  [loadTableSearch]="false"
+  [showTableFilter]="false"
   [pageSizeOptions]="[5, 10, 20]"
-  [searchTextColumnStyle]="'col-12'"
   [sortingDisabled]="true"
   [tableColumns]="tableColumns"
   [tableData]="userPageResult.users"
