--- a/frontend/src/app/pages/bodi/companies/companies.component.html
+++ b/frontend/src/app/pages/bodi/companies/companies.component.html
@@ -9,6 +9,7 @@
   [canEdit]="true"
   (editElementEvent)="editVersion($event)"
   (getTableElementsEvent)="getOverview($event)"
+  [tableFilterConfig]="tableFilterConfig"
   data-cy="bodi-companies"
 >
 </app-table>
