--- a/frontend/src/app/pages/user-administration/client-credential/overview/user-administration-client-overview.component.html
+++ b/frontend/src/app/pages/user-administration/client-credential/overview/user-administration-client-overview.component.html
@@ -1,16 +1,12 @@
 <app-table
   (editElementEvent)="edit($event)"
   (getTableElementsEvent)="getOverview($event)"
-  [displayStatusSearch]="false"
-  [displayValidOnSearch]="false"
-  [isLoading]="isLoading"
-  [loadTableSearch]="false"
   [pageSizeOptions]="[5, 10, 20]"
-  [searchTextColumnStyle]="'col-12'"
   [sortingDisabled]="true"
   [tableColumns]="tableColumns"
   [tableData]="clientCredentials"
   [totalCount]="totalCount"
+  [showTableFilter]="false"
 >
 </app-table>
 <router-outlet></router-outlet>
