--- a/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-detail/timetable-hearing-overview-detail.component.html
@@ -173,7 +173,7 @@
     </div>
 
     <app-table
-      (editElementEvent)="editVersion($event)"
+      (editElementEvent)="editStatement($event)"
       (getTableElementsEvent)="getOverview($event)"
       [canEdit]="true"
       [isLoading]="isLoading"
