--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -8,6 +8,11 @@
     [required]="required"
     fieldLabel="{{ label }}"
   ></app-atlas-label-field>
-  <textarea data-cy="comment" formControlName="comment" matInput rows="7"></textarea>
-  <app-atlas-field-error [form]="formGroup" controlName="comment"></app-atlas-field-error>
+  <textarea
+    [attr.data-cy]="controlName"
+    formControlName="{{ controlName }}"
+    matInput
+    rows="7"
+  ></textarea>
+  <app-atlas-field-error [form]="formGroup" controlName="{{ controlName }}"></app-atlas-field-error>
 </div>
